# EdenExplorer

./: .gitignore  .releaserc.json  Cargo.toml  README.md
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: build-and-release.yml  ci-check.yml  post-pr-merge.yml  release.yml
locales/en-US/: main.ftl
locales/id-ID/: main.ftl
locales/ja-JP/: main.ftl
locales/zh-CN/: main.ftl
locales/zh-HK/: main.ftl
locales/zh-TW/: main.ftl
logo/: exploreredenicon.xcf
scripts/: build-and-package.ps1  update-version.ps1
src/: build.rs  drives.rs  fs.rs  indexer.rs  main.rs  state.rs
src/app/: customizetheme.rs  explorer.rs  explorer_imp.rs  features.rs  formatting.rs  icons.rs  itemviewer.rs  mod.rs  settings.rs  sidebar.rs  sorting.rs  table.rs  tabs.rs  topbar.rs  utils.rs
src/assets/: NotoSansCJK-Regular.ttc
src/core/: benchmark.rs  drives.rs  fs.rs  indexer.rs  mod.rs  networkdevices.rs  portable.rs  state.rs
src/core/utils/: clipboard.rs  colors.rs  dialogs.rs  files.rs  fonts.rs  mod.rs  sorting.rs  tabs.rs  text.rs  widgets.rs
src/gui/: dragdrop.rs  i18n.rs  icons.rs  mod.rs  theme.rs  utils.rs
src/gui/windows/: about.rs  customizetheme.rs  dragdrop.rs  enums.rs  mainwindow.rs  mainwindow_imp.rs  mod.rs  navigation.rs  settings.rs  shell_context_menu.rs  structs.rs  windowsoverrides.rs
src/gui/windows/containers/: enums.rs  explorer.rs  itemviewer.rs  itemviewer_helper.rs  itemviewer_navbar.rs  mod.rs  sidebar.rs  structs.rs  tabs.rs  tags.rs  topbar.rs
