[package]
name = "EdenExplorer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
ntapi = "0.4.3"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming"
] }
crossbeam-channel = "0.5"
dirs = "5.0"
dashmap = "6.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.10"
egui-phosphor = "0.11"