[package]
name = "EdenExplorer"
version = "0.3.0"
edition = "2024"
build = "src/build.rs"

[[bin]]
name = "EdenExplorer"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "EdenExplorer.exe"
LegalCopyright = "Copyright © 2026"

[dependencies]
image = "0.25"
eframe = "0.33.3"
egui = { version = "0.33.3", features = ["serde"] }
egui_extras = "0.33.3"
ntapi = "0.4.3"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
    "Win32_System_Com",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_PortableDevices",
    "Win32_NetworkManagement_NetManagement",
    "Win32_UI_Input_KeyboardAndMouse",
] }
crossbeam-channel = "0.5"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.10"
egui-phosphor = { version = "0.11", features = ["regular", "fill"] }
serde_json = "1.0"
num_cpus = "1.16"
lazy_static = "1.4"
raw-window-handle = "0.6"
rfd = "0.14"
lru = "0.16"
