[package]
name = "EdenExplorer"
version = "0.8.0"
edition = "2024"
build = "src/build.rs"

[[bin]]
name = "EdenExplorer"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "EdenExplorer.exe"
LegalCopyright = "Copyright © 2026"

[dependencies]
image = "0.25.10"
eframe = "0.33.3"
egui = { version = "0.33.3", features = ["serde"] }
egui_extras = "0.33.3"
ntapi = "0.4.3"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
    "Win32_System_Com",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_PortableDevices",
    "Win32_NetworkManagement_NetManagement",
    "Win32_UI_Input_KeyboardAndMouse",
] }
windows-core = "0.61.2"
crossbeam-channel = "0.5.15"
dirs = "6.0"
bincode = "1.3"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
rayon = "1.12"
egui-phosphor = { version = "0.11", features = ["regular", "fill"] }
serde_json = "1.0.149"
num_cpus = "1.17"
lazy_static = "1.5"
raw-window-handle = "0.6.2"
rfd = "0.17.2"
lru = "0.17"
chrono = "0.4.44"
